# ternify

./: .gitignore  CMakeLists.txt  setup.py
benchmarks/: benchmark_flops.cpp  benchmark_tgemm.cpp  matmul_cpu.py
examples/: CMakeLists.txt  matmul.cpp  relu.cpp
examples/integration/: mlp.cpp
examples/layers/: add.cpp  gelu.cpp  layernorm.cpp  linear.cpp  relu.cpp  softmax.cpp
examples/operators/: gelu.cpp  layernorm.cpp  relu.cpp  softmax.cpp  types.cpp
include/: tgemm.hpp  tgemm_pack_weights.hpp
include/backend/: common_tgemm.hpp
include/layers/: add.h  gelu.h  layernorm.h  linear.h  relu.h  softmax.h
include/ops/: add.h  gelu.h  layernorm.h  matmul.h  relu.h  softmax.h
include/types/: types.h
kernels/: bindings.cpp  pack2b.cpp  pack2b.h  tlinear_forward.cpp  tlinear_forward.h  unpack2b.cpp  unpack2b.h
kernels/common/: bindings.cpp  bitpack8to2.cpp  bitpack8to2.h  bitunpack8to2.cpp  bitunpack8to2.h  linear_forward.cpp  linear_forward.h  pack2b.cpp  pack2b_cpu.cpp  pack2b_cpu.h  tgemm_cpu.cpp  tgemm_cpu.h  tlinear_forward.cpp  unpack2b.cpp  unpack2b_cpu.cpp
kernels/common/primitives/: sgemm.cpp  sgemm.h  tgemm.cpp  tgemm.h  tmulbtrans.cpp  tmulbtrans.h
kernels/cpu/arm/: matmul.cpp
kernels/cpu/generic/: bindings.cpp  matmul.cpp  matmul.h  matmul2b.cpp  matmul2b.h  pack2b.cpp  pack2b.h  unpack2b.cpp  unpack2b.h
kernels/cuda/: matmul.cu  pack2b.h  pack2b_cuda.cu  pack2b_cuda.h  unpack2b_cuda.cu  unpack2b_cuda.h
kernels/neon/: bindings.cpp  pack2b.cpp  pack2b_cpu.cpp  pack2b_cpu.h  tgemm_cpu.cpp  tgemm_cpu.h  unpack2b.cpp  unpack2b.h  unpack2b_cpu.cpp  unpack2b_cpu.h
src/: tgemm.cpp  tgemm_pack_weights.cpp
src/backend/: common_tgemm.cpp
src/layers/: add.cpp  gelu.cpp  layernorm.cpp  linear.cpp  relu.cpp  softmax.cpp
src/ops/: add.cpp  gelu.cpp  layernorm.cpp  matmul.cpp  relu.cpp  softmax.cpp
src/types/: types.cpp
ternify/: __init__.py
ternify/tnn/: NaiveLinear.py
ternify/tnn/src/kernels/common/: bindings.cpp
ternify/tnn/src/kernels/common/primitives/: tgemm.cpp
ternify/tnn/src/kernels/cuda/: pack2b.cu
ternify/tnn/src/kernels/neon/primitives/: tgemm.cpp
tests/: test_tgemm.cpp  test_tgemm_pack_weights.cpp
tests/kernels/: conftest.py  test_matmul2b_cpu.py  test_matmul_cpu.py  test_packing_cpu.py  test_packing_cuda.py  test_tlinear_forward_cpu.py
